Fixed date height on small and xs screen layouts

--- a/wp-content/plugins/ovr-widgets/css/ovr-blog-feature-widget.css
+++ b/wp-content/plugins/ovr-widgets/css/ovr-blog-feature-widget.css
@@ -46,7 +46,7 @@
 }
 .ovr_blog_feature_date {
   position: absolute;
-  top: 265px;
+  top: 280px;
   left: 10px;
 }
 .ovr_blog_feature_secondary_image {
