--- a/wp-content/plugins/ovr-widgets/css/ovr-trip-feature-widget.css
+++ b/wp-content/plugins/ovr-widgets/css/ovr-trip-feature-widget.css
@@ -48,7 +48,7 @@
 }
 .ovr_trip_feature_date {
   position: absolute;
-  top: 265px;
+  top: 280px;
   left: 10px;
 }
 .ovr_trip_feature_secondary_image {
